test link file html

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                                 <a href="#">Home</a>
                             </li>
                             <li>
-                                <a href="/menu.html">Menu</a>
+                                <a href="./menu.html">Menu</a>
                             </li>
                             <li>
-                                <a href="/aboutUs.html">About Us</a>
+                                <a href="./aboutUs.html">About Us</a>
                             </li>
                             <li>
-                                <a href="/ourStory.html">Our Story</a>
+                                <a href="./ourStory.html">Our Story</a>
                             </li>
                             <li>
-                                <a href="/blog.html">Blog</a>
+                                <a href="./blog.html">Blog</a>
                             </li>
                             <li>
-                                <a href="/contact.html">Contact</a>
+                                <a href="./contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -111,6 +111,77 @@
                             class="img"
                         />
                     </div>
+                </div>
+            </div>
+        </div>
+        <!-- Know More -->
+        <div class="know-more">
+            <div class="main-content">
+                <div class="body">
+                    <!-- info left -->
+                    <div class="info">
+                        <p class="caption">KNOW MORE ABOUT US</p>
+                        <h2 class="heading">
+                            We source sustainable & line caught Foods
+                        </h2>
+                        <p class="desc">
+                            Edit this text to make it your own. To edit, simply
+                            click directly on the text to start adding your own
+                            words. You can move the text by dragging and
+                            dropping the text anywhere on the page.
+                        </p>
+                        <div class="item-list">
+                            <!-- item 1 -->
+                            <div class="item">
+                                <div class="value">
+                                    <img
+                                        src="./assets/img/icon/icon_know_more.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <p class="number">10+ People</p>
+                                </div>
+                                <p class="desc">We are Small Team</p>
+                                <p class="desc">Through True Rich Attended does no end it his mother since favourable.</p>
+                            </div>
+                            <!-- item 2 -->
+                            <div class="item">
+                                <div class="value">
+                                    <img
+                                        src="./assets/img/icon/icon_know_more.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <p class="number">2014</p>
+                                </div>
+                                <p class="desc">We are From</p>
+                                <p class="desc">Through True Rich Attended does no end it his mother since favourable.</p>
+                            </div>
+                            <!-- item 3 -->
+                            <div class="item">
+                                <div class="value">
+                                    <img
+                                        src="./assets/img/icon/icon_know_more.svg"
+                                        alt=""
+                                        class="icon"
+                                    />
+                                    <p class="number">200k</p>
+                                </div>
+                                <p class="desc">We Served</p>
+                                <p class="desc">Through True Rich Attended does no end it his mother since favourable.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="btn">
+                        <span class="label">View Menu</span>
+                        <img
+                            src="./assets/img/arrow-to-right-black.svg"
+                            alt="arrow-to-right"
+                            class="arrow-to-right"
+                        />
+                    </button>
+                    <!-- images right -->
+                    <div class="images"></div>
                 </div>
             </div>
         </div>
