Làm phần Know More

--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,46 @@
         />
     </head>
     <body>
-        contact page
+        <!-- Header -->
+        <header class="fixed header">
+            <div class="main-content">
+                <div class="body">
+                    <!-- Logo -->
+                    <img src="./assets/img/Logo.svg" alt="logo" class="logo" />
+                    <!-- Navigation -->
+                    <div class="nav">
+                        <ul>
+                            <li>
+                                <a href="./index.html">Home</a>
+                            </li>
+                            <li>
+                                <a href="./menu.html">Menu</a>
+                            </li>
+                            <li>
+                                <a href="./aboutUs.html">About Us</a>
+                            </li>
+                            <li>
+                                <a href="./ourStory.html">Our Story</a>
+                            </li>
+                            <li>
+                                <a href="./blog.html">Blog</a>
+                            </li>
+                            <li>
+                                <a href="./contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Action -->
+                    <button class="action">
+                        <span class="label">Clone Project</span>
+                        <img
+                            src="./assets/img/arrow-to-right.svg"
+                            alt="arrow-to-right"
+                            class="arrow-to-right"
+                        />
+                    </button>
+                </div>
+            </div>
+        </header>
     </body>
 </html>
