--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="nav">
                         <ul>
                             <li>
-                                <a href="#">Home</a>
+                                <a href="./index.html">Home</a>
                             </li>
                             <li>
                                 <a href="./menu.html">Menu</a>
@@ -74,7 +74,7 @@
                             words. You can move the text.
                         </p>
                         <button class="btn">
-                            <span class="label">View Menu</span>
+                            <span class="label-med">View Menu</span>
                             <img
                                 src="./assets/img/arrow-to-right-black.svg"
                                 alt="arrow-to-right"
@@ -121,7 +121,7 @@
                     <!-- info left -->
                     <div class="info">
                         <p class="caption">KNOW MORE ABOUT US</p>
-                        <h2 class="heading">
+                        <h2 class="heading lv2">
                             We source sustainable & line caught Foods
                         </h2>
                         <p class="desc">
@@ -142,7 +142,10 @@
                                     <p class="number">10+ People</p>
                                 </div>
                                 <p class="desc">We are Small Team</p>
-                                <p class="desc">Through True Rich Attended does no end it his mother since favourable.</p>
+                                <p class="desc">
+                                    Through True Rich Attended does no end it
+                                    his mother since favourable.
+                                </p>
                             </div>
                             <!-- item 2 -->
                             <div class="item">
@@ -155,7 +158,10 @@
                                     <p class="number">2014</p>
                                 </div>
                                 <p class="desc">We are From</p>
-                                <p class="desc">Through True Rich Attended does no end it his mother since favourable.</p>
+                                <p class="desc">
+                                    Through True Rich Attended does no end it
+                                    his mother since favourable.
+                                </p>
                             </div>
                             <!-- item 3 -->
                             <div class="item">
@@ -168,20 +174,27 @@
                                     <p class="number">200k</p>
                                 </div>
                                 <p class="desc">We Served</p>
-                                <p class="desc">Through True Rich Attended does no end it his mother since favourable.</p>
+                                <p class="desc">
+                                    Through True Rich Attended does no end it
+                                    his mother since favourable.
+                                </p>
                             </div>
                         </div>
+
+                        <button class="btn">
+                            <span class="label-med">View Menu</span>
+                            <img
+                                src="./assets/img/arrow-to-right-black.svg"
+                                alt="arrow-to-right"
+                                class="arrow-to-right"
+                            />
+                        </button>
                     </div>
-                    <button class="btn">
-                        <span class="label">View Menu</span>
-                        <img
-                            src="./assets/img/arrow-to-right-black.svg"
-                            alt="arrow-to-right"
-                            class="arrow-to-right"
-                        />
-                    </button>
                     <!-- images right -->
-                    <div class="images"></div>
+                    <div class="images">
+                        <img src="./assets/img/Know more Image 1.png" alt="" class="img">
+                        <img src="./assets/img/Know more Image 2.png" alt="" class="img">
+                    </div>
                 </div>
             </div>
         </div>
