Làm phần Serving

--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
                 <div class="body">
                     <!-- info left -->
                     <div class="info">
-                        <p class="caption">KNOW MORE ABOUT US</p>
+                        <p class="caption">
+                            KNOW MORE ABOUT US KNOW MORE ABOUT US
+                        </p>
                         <h2 class="heading lv2">
                             We source sustainable & line caught Foods
                         </h2>
@@ -192,8 +194,122 @@
                     </div>
                     <!-- images right -->
                     <div class="images">
-                        <img src="./assets/img/Know more Image 1.png" alt="" class="img">
-                        <img src="./assets/img/Know more Image 2.png" alt="" class="img">
+                        <img
+                            src="./assets/img/Know more Image 1.png"
+                            alt=""
+                            class="img"
+                        />
+                        <img
+                            src="./assets/img/Know more Image 2.png"
+                            alt=""
+                            class="img"
+                        />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Serving -->
+        <div class="serving">
+            <div class="main-content">
+                <div class="body">
+                    <p class="caption">WHAT WE ARE SERVING</p>
+                    <div class="details">
+                        <h2 class="heading lv2">
+                            We all have to eat, so why not do it beautifully?
+                        </h2>
+                        <p class="desc">
+                            Through True Rich Attended does no end it his mother
+                            since favourable real had half every him case in
+                            packages enquire we up ecstatic.. Through True Rich
+                            Attended does no end it his mother
+                        </p>
+                    </div>
+                    <!-- Table -->
+                    <div class="table">
+                        <!-- item 1 -->
+                        <div class="item">
+                            <div class="icon">
+                                <img
+                                    src="./assets/img/icon/icon_cake.svg"
+                                    alt="icon_cake"
+                                />
+                            </div>
+                            <h3 class="heading lv3">Quafe Cake</h3>
+                            <p class="desc">
+                                Through True Rich Attended no end it his mother
+                                since favourable real had half every him.
+                            </p>
+                        </div>
+                        <!-- item 2 -->
+                        <div class="item">
+                            <div class="icon">
+                                <img
+                                    src="./assets/img/icon/icon_coffee.svg"
+                                    alt="icon_coffee"
+                                />
+                            </div>
+                            <h3 class="heading lv3">Cofee</h3>
+                            <p class="desc">
+                                Through True Rich Attended no end it his mother
+                                since favourable real had half every him.
+                            </p>
+                        </div>
+                        <!-- item 3 -->
+                        <div class="item">
+                            <div class="icon">
+                                <img
+                                    src="./assets/img/icon/icon_fast-food.svg"
+                                    alt="icon_fast-food"
+                                />
+                            </div>
+                            <h3 class="heading lv3">Fast Food</h3>
+                            <p class="desc">
+                                Through True Rich Attended no end it his mother
+                                since favourable real had half every him.
+                            </p>
+                        </div>
+                        <!-- item 4 -->
+                        <div class="item">
+                            <div class="icon">
+                                <img
+                                    src="./assets/img/icon/icon_cocktails.svg"
+                                    alt="icon_cocktails"
+                                />
+                            </div>
+                            <h3 class="heading lv3">Cocktails</h3>
+                            <p class="desc">
+                                Through True Rich Attended no end it his mother
+                                since favourable real had half every him.
+                            </p>
+                        </div>
+                        <!-- item 5 -->
+                        <div class="item">
+                            <div class="icon">
+                                <img
+                                    src="./assets/img/icon/icon_chicken-grill.svg"
+                                    alt="icon_chicken-grill"
+                                />
+                            </div>
+                            <h3 class="heading lv3">Grill</h3>
+                            <p class="desc">
+                                Through True Rich Attended no end it his mother
+                                since favourable real had half every him.
+                            </p>
+                        </div>
+                        <!-- item 6 -->
+                        <div class="item">
+                            <div class="icon">
+                                <img
+                                    src="./assets/img/icon/icon_snack.svg"
+                                    alt="icon_snack"
+                                />
+                            </div>
+                            <h3 class="heading lv3">Snacks</h3>
+                            <p class="desc">
+                                Through True Rich Attended no end it his mother
+                                since favourable real had half every him.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
