fix bug phần logo và button menu

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -23,7 +23,12 @@
             <div class="main-content">
                 <div class="body">
                     <!-- Logo -->
-                    <img src="./assets/img/Logo.svg" alt="logo" class="logo" />
+                    <a href="./index.html"
+                        ><img
+                            src="./assets/img/Logo.svg"
+                            alt="logo"
+                            class="logo"
+                    /></a>
                     <!-- Navigation -->
                     <div class="nav">
                         <ul>
