--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
             <div class="main-content">
                 <div class="body">
                     <!-- Logo -->
-                    <img src="./assets/img/Logo.svg" alt="logo" class="logo" />
+                    <a href="./index.html"
+                        ><img
+                            src="./assets/img/Logo.svg"
+                            alt="logo"
+                            class="logo"
+                    /></a>
                     <!-- Navigation -->
                     <div class="nav">
                         <ul>
@@ -73,7 +78,10 @@
                             click directly on the text to start adding your own
                             words. You can move the text.
                         </p>
-                        <button class="btn">
+                        <button
+                            class="btn"
+                            onclick="window.location.href='./menu.html'"
+                        >
                             <span class="label-med">View Menu</span>
                             <img
                                 src="./assets/img/arrow-to-right-black.svg"
@@ -183,7 +191,10 @@
                             </div>
                         </div>
 
-                        <button class="btn">
+                        <button
+                            onclick="window.location.href='./menu.html'"
+                            class="btn"
+                        >
                             <span class="label-med">View Menu</span>
                             <img
                                 src="./assets/img/arrow-to-right-black.svg"
