--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="main-content">
                 <div class="body">
                     <!-- Logo -->
-                    <a href="./index.html"
+                    <a href="#"
                         ><img
                             src="./assets/img/Logo.svg"
                             alt="logo"
@@ -33,7 +33,7 @@
                     <div class="nav">
                         <ul>
                             <li>
-                                <a href="./index.html">Home</a>
+                                <a href="#">Home</a>
                             </li>
                             <li>
                                 <a href="./menu.html">Menu</a>
@@ -321,6 +321,84 @@
                                 since favourable real had half every him.
                             </p>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Menu -->
+        <div class="menu">
+            <div class="main-content">
+                <div class="body">
+                    <div class="details">
+                        <p class="caption">OUR MENU</p>
+                        <div class="info-top">
+                            <h2 class="heading lv2 heading_details">Discover our menu chart</h2>
+                            <p class="desc">Through True Rich Attended does no end it his mother since favourable real had half every him case in packages enquire we up ecstatic.. Through True Rich Attended does no end it his mother</p>
+                        </div>
+                        <h5 class="heading lv5 p-menu">Most Popular Picks</h5>
+                        <!-- Item-List -->
+                        <div class="item-list">
+                            <!-- item 1 -->
+                            <div class="item">
+                                <img src="./assets/img/Header Image.png" alt="" class="thumb">
+                                <div class="info">
+                                    <h2 class="heading lv4">Drp Cofee</h2>
+                                    <p class="cost">$08.85</p>
+                                </div>
+                            </div>
+                            <!-- item 2 -->
+                            <div class="item">
+                                <img src="./assets/img/Image-menu-2.png" alt="" class="thumb">
+                                <div class="info">
+                                    <h2 class="heading lv4">Choco Cup Cake</h2>
+                                    <p class="cost">$4.85</p>
+                                </div>
+                            </div>
+                            <!-- item 3 -->
+                            <div class="item">
+                                <img src="./assets/img/Image-menu-3.png" alt="" class="thumb">
+                                <div class="info">
+                                    <h2 class="heading lv4">Chicken Burger</h2>
+                                    <p class="cost">$8.85</p>
+                                </div>
+                            </div>
+                            <!-- item 4 -->
+                            <div class="item">
+                                <img src="./assets/img/Image-menu-4.png" alt="" class="thumb">
+                                <div class="info">
+                                    <h2 class="heading lv4">French Fries</h2>
+                                    <p class="cost">$7.85</p>
+                                </div>
+                            </div>
+                            <!-- item 5 -->
+                            <div class="item">
+                                <img src="./assets/img/Image-menu-5.png" alt="" class="thumb">
+                                <div class="info">
+                                    <h2 class="heading lv4">Sandwitch</h2>
+                                    <p class="cost">$3.97</p>
+                                </div>
+                            </div>
+                            <!-- item 6 -->
+                            <div class="item">
+                                <img src="./assets/img/Image-menu-6.png" alt="" class="thumb">
+                                <div class="info">
+                                    <h2 class="heading lv4">Chinese Soup</h2>
+                                    <p class="cost">$8.85</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <button
+                            onclick="window.location.href='./menu.html'"
+                            class="btn"
+                        >
+                            <span class="label-med">View Menu</span>
+                            <img
+                                src="./assets/img/arrow-to-right-black.svg"
+                                alt="arrow-to-right"
+                                class="arrow-to-right"
+                            />
+                        </button>
                     </div>
                 </div>
             </div>
