--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             rel="stylesheet"
         />
     </head>
-    <body style="height: 5000px">
+    <body style="height: 10000px">
         <!-- Header -->
         <header class="fixed header">
             <div class="main-content">
@@ -332,15 +332,27 @@
                     <div class="details">
                         <p class="caption">OUR MENU</p>
                         <div class="info-top">
-                            <h2 class="heading lv2 heading_details">Discover our menu chart</h2>
-                            <p class="desc">Through True Rich Attended does no end it his mother since favourable real had half every him case in packages enquire we up ecstatic.. Through True Rich Attended does no end it his mother</p>
+                            <h2 class="heading lv2 heading_details">
+                                Discover our menu chart
+                            </h2>
+                            <p class="desc">
+                                Through True Rich Attended does no end it his
+                                mother since favourable real had half every him
+                                case in packages enquire we up ecstatic..
+                                Through True Rich Attended does no end it his
+                                mother
+                            </p>
                         </div>
                         <h5 class="heading lv5 p-menu">Most Popular Picks</h5>
                         <!-- Item-List -->
                         <div class="item-list">
                             <!-- item 1 -->
                             <div class="item">
-                                <img src="./assets/img/Header Image.png" alt="" class="thumb">
+                                <img
+                                    src="./assets/img/Image-menu-1.png"
+                                    alt=""
+                                    class="thumb"
+                                />
                                 <div class="info">
                                     <h2 class="heading lv4">Drp Cofee</h2>
                                     <p class="cost">$08.85</p>
@@ -348,7 +360,11 @@
                             </div>
                             <!-- item 2 -->
                             <div class="item">
-                                <img src="./assets/img/Image-menu-2.png" alt="" class="thumb">
+                                <img
+                                    src="./assets/img/Image-menu-2.png"
+                                    alt=""
+                                    class="thumb"
+                                />
                                 <div class="info">
                                     <h2 class="heading lv4">Choco Cup Cake</h2>
                                     <p class="cost">$4.85</p>
@@ -356,7 +372,11 @@
                             </div>
                             <!-- item 3 -->
                             <div class="item">
-                                <img src="./assets/img/Image-menu-3.png" alt="" class="thumb">
+                                <img
+                                    src="./assets/img/Image-menu-3.png"
+                                    alt=""
+                                    class="thumb"
+                                />
                                 <div class="info">
                                     <h2 class="heading lv4">Chicken Burger</h2>
                                     <p class="cost">$8.85</p>
@@ -364,7 +384,11 @@
                             </div>
                             <!-- item 4 -->
                             <div class="item">
-                                <img src="./assets/img/Image-menu-4.png" alt="" class="thumb">
+                                <img
+                                    src="./assets/img/Image-menu-4.png"
+                                    alt=""
+                                    class="thumb"
+                                />
                                 <div class="info">
                                     <h2 class="heading lv4">French Fries</h2>
                                     <p class="cost">$7.85</p>
@@ -372,7 +396,11 @@
                             </div>
                             <!-- item 5 -->
                             <div class="item">
-                                <img src="./assets/img/Image-menu-5.png" alt="" class="thumb">
+                                <img
+                                    src="./assets/img/Image-menu-5.png"
+                                    alt=""
+                                    class="thumb"
+                                />
                                 <div class="info">
                                     <h2 class="heading lv4">Sandwitch</h2>
                                     <p class="cost">$3.97</p>
@@ -380,7 +408,11 @@
                             </div>
                             <!-- item 6 -->
                             <div class="item">
-                                <img src="./assets/img/Image-menu-6.png" alt="" class="thumb">
+                                <img
+                                    src="./assets/img/Image-menu-6.png"
+                                    alt=""
+                                    class="thumb"
+                                />
                                 <div class="info">
                                     <h2 class="heading lv4">Chinese Soup</h2>
                                     <p class="cost">$8.85</p>
@@ -399,6 +431,42 @@
                                 class="arrow-to-right"
                             />
                         </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Quote -->
+        <div class="quote">
+            <div class="main-content">
+                <div class="body">
+                    <div class="details">
+                        <img
+                            src="./assets/img/icon/icon_quotes.svg"
+                            alt=""
+                            class="icon"
+                        />
+                        <p class="text">
+                            Edit this text to make it your own. To edit, simply
+                            click directly on the text to start adding your own
+                            words. You can move the text by dragging and
+                            dropping the text
+                        </p>
+                        <div class="info">
+                            <div class="container">
+                                <p class="label-med">Joheny Andro</p>
+                                <p class="label-extransmall">
+                                    Bhubaneswar, Odisha
+                                </p>
+                            </div>
+                            <img
+                                src="./assets/img/avt-quote.png"
+                                alt="avatar"
+                                class="avt"
+                            />
+                        </div>
+                    </div>
+                    <div class="images">
+                        <img src="./assets/img/Image-quote.png" alt="video" />
                     </div>
                 </div>
             </div>
