--- a/index.html
+++ b/index.html
@@ -471,5 +471,43 @@
                 </div>
             </div>
         </div>
+        <!-- Blog -->
+        <div class="blog">
+            <div class="main-content">
+                <div class="body">
+                    <h2 class="title heading lv2">Read Our Lastest Blog</h2>
+
+                    <div class="item-list">
+                        <!-- item 1 -->
+                        <div class="item">
+                            <div class="container">
+                                <p class="date">21 Jun 2021</p>
+                                <h3 class="heading-item heading lv3">Extra Thick Homemad Pizza Sauce</h3>
+                                <p class="desc">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
+                            </div>
+                            <img src="./assets/img/Image-Blog.png" alt="" class="thumb">
+                        </div>
+                        <!-- item 2 -->
+                        <div class="item">
+                            <div class="container">
+                                <p class="date">21 Jun 2021</p>
+                                <h3 class="heading-item heading lv3">The Best Way to Store Fresh Herbs</h3>
+                                <p class="desc">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
+                            </div>
+                            <img src="./assets/img/Image-Blog-2.png" alt="" class="thumb">
+                        </div>
+                        <!-- item 3 -->
+                        <div class="item">
+                            <div class="container">
+                                <p class="date">21 Jun 2021</p>
+                                <h3 class="heading-item heading lv3">5 ways to prepare porridge</h3>
+                                <p class="desc">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
+                            </div>
+                            <img src="./assets/img/Image-Blog-3.png" alt="" class="thumb">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
