--- a/index.html
+++ b/index.html
@@ -482,29 +482,101 @@
                         <div class="item">
                             <div class="container">
                                 <p class="date">21 Jun 2021</p>
-                                <h3 class="heading-item heading lv3">Extra Thick Homemad Pizza Sauce</h3>
-                                <p class="desc">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
+                                <h3 class="heading-item heading lv3">
+                                    Extra Thick Homemad Pizza Sauce
+                                </h3>
+                                <p class="desc">
+                                    It is a long established fact that a reader
+                                    will be distracted by the readable content
+                                    of a page.
+                                </p>
                             </div>
-                            <img src="./assets/img/Image-Blog.png" alt="" class="thumb">
+                            <img
+                                src="./assets/img/Image-Blog.png"
+                                alt=""
+                                class="thumb"
+                            />
                         </div>
                         <!-- item 2 -->
                         <div class="item">
                             <div class="container">
                                 <p class="date">21 Jun 2021</p>
-                                <h3 class="heading-item heading lv3">The Best Way to Store Fresh Herbs</h3>
-                                <p class="desc">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
+                                <h3 class="heading-item heading lv3">
+                                    The Best Way to Store Fresh Herbs
+                                </h3>
+                                <p class="desc">
+                                    It is a long established fact that a reader
+                                    will be distracted by the readable content
+                                    of a page.
+                                </p>
                             </div>
-                            <img src="./assets/img/Image-Blog-2.png" alt="" class="thumb">
+                            <img
+                                src="./assets/img/Image-Blog-2.png"
+                                alt=""
+                                class="thumb"
+                            />
                         </div>
                         <!-- item 3 -->
                         <div class="item">
                             <div class="container">
                                 <p class="date">21 Jun 2021</p>
-                                <h3 class="heading-item heading lv3">5 ways to prepare porridge</h3>
-                                <p class="desc">It is a long established fact that a reader will be distracted by the readable content of a page.</p>
+                                <h3 class="heading-item heading lv3">
+                                    5 ways to prepare porridge
+                                </h3>
+                                <p class="desc">
+                                    It is a long established fact that a reader
+                                    will be distracted by the readable content
+                                    of a page.
+                                </p>
                             </div>
-                            <img src="./assets/img/Image-Blog-3.png" alt="" class="thumb">
+                            <img
+                                src="./assets/img/Image-Blog-3.png"
+                                alt=""
+                                class="thumb"
+                            />
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Contact -->
+        <div class="contact">
+            <div class="main-content">
+                <div class="body">
+                    <div class="info">
+                        <div class="container">
+                            <!-- item 1 -->
+                            <div class="item">
+                                <h4 class="heading lv4">Working Hour</h4>
+                                <p class="desc">
+                                    Sunday to Saturday 09:00 AM to 11:00 PM
+                                </p>
+                            </div>
+                            <!-- item 2 -->
+                            <div class="item">
+                                <h4 class="heading lv4">Location</h4>
+                                <p class="desc">
+                                    Street - 127, New York, United States 546544
+                                </p>
+                            </div>
+                            <!-- item 3 -->
+                            <div class="item">
+                                <h4 class="heading lv4">Contact us</h4>
+                                <a href="tel:+123456789" class="desc"
+                                    ><p>+123456789</p></a
+                                >
+                                <a href="mailto:hey@yourdomain.com" class="desc"
+                                    ><p>hey@yourdomain.com</p></a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div class="map">
+                        <img
+                            src="./assets/img/Imgae-Contact-map.png"
+                            alt="map"
+                            class="img-map"
+                        />
                     </div>
                 </div>
             </div>
