--- a/index.html
+++ b/index.html
@@ -581,6 +581,7 @@
                 </div>
             </div>
         </div>
+        <!-- Footer -->
         <footer class="footer">
             <div class="main-content">
                 <div class="body">
@@ -625,20 +626,35 @@
                         <!-- Socials -->
                         <div class="socials-list">
                             <div class="social">
-                                <img src="./assets/img/icon/icon_facebook.svg" alt="icon_facebook" />
+                                <img
+                                    src="./assets/img/icon/icon_facebook.svg"
+                                    alt="icon_facebook"
+                                />
                             </div>
                             <div class="social">
-                                <img src="./assets/img/icon/icon_twitter.svg" alt="icon_twitter" />
+                                <img
+                                    src="./assets/img/icon/icon_twitter.svg"
+                                    alt="icon_twitter"
+                                />
                             </div>
                             <div class="social">
-                                <img src="./assets/img/icon/icon_instagram.svg" alt="icon_instagram" />
+                                <img
+                                    src="./assets/img/icon/icon_instagram.svg"
+                                    alt="icon_instagram"
+                                />
                             </div>
                             <div class="social">
-                                <img src="./assets/img/icon/icon_linkin.svg" alt="icon_linkin" />
+                                <img
+                                    src="./assets/img/icon/icon_linkin.svg"
+                                    alt="icon_linkin"
+                                />
                             </div>
                         </div>
                         <!-- action -->
-                        <button class="action">
+                        <button
+                            class="action"
+                            onclick="window.location.href='./contact.html'"
+                        >
                             <span class="label-med">Contact Us</span>
                             <svg
                                 width="21"
