Làm phần History About Page

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <!-- info left -->
                         <div class="info">
                             <p class="caption">
-                                KNOW MORE ABOUT US KNOW MORE ABOUT US
+                                KNOW MORE ABOUT US
                             </p>
                             <h2 class="heading lv2">
                                 We source sustainable & line caught Foods
