--- a/aboutUs.html
+++ b/aboutUs.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <!-- Style -->
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/style_aboutUs.css" />
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -65,6 +66,173 @@
                 </div>
             </div>
         </header>
+        <!-- Main -->
+        <main>
+            <!-- Know More -->
+            <div class="know-more">
+                <div class="main-content">
+                    <div class="body">
+                        <!-- info left -->
+                        <div class="info">
+                            <p class="caption">KNOW MORE ABOUT US</p>
+                            <h2 class="heading lv2">
+                                We source sustainable & line caught Foods
+                            </h2>
+                            <p class="desc">
+                                Edit this text to make it your own. To edit,
+                                simply click directly on the text to start
+                                adding your own words. You can move the text by
+                                dragging and dropping the text anywhere on the
+                                page.
+                            </p>
+                            <div class="item-list">
+                                <!-- item 1 -->
+                                <div class="item">
+                                    <div class="value">
+                                        <img
+                                            src="./assets/img/icon/icon_know_more.svg"
+                                            alt=""
+                                            class="icon"
+                                        />
+                                        <p class="number">10+ People</p>
+                                    </div>
+                                    <p class="desc">We are Small Team</p>
+                                    <p class="desc">
+                                        Through True Rich Attended does no end
+                                        it his mother since favourable.
+                                    </p>
+                                </div>
+                                <!-- item 2 -->
+                                <div class="item">
+                                    <div class="value">
+                                        <img
+                                            src="./assets/img/icon/icon_know_more.svg"
+                                            alt=""
+                                            class="icon"
+                                        />
+                                        <p class="number">2014</p>
+                                    </div>
+                                    <p class="desc">We are From</p>
+                                    <p class="desc">
+                                        Through True Rich Attended does no end
+                                        it his mother since favourable.
+                                    </p>
+                                </div>
+                                <!-- item 3 -->
+                                <div class="item">
+                                    <div class="value">
+                                        <img
+                                            src="./assets/img/icon/icon_know_more.svg"
+                                            alt=""
+                                            class="icon"
+                                        />
+                                        <p class="number">200k</p>
+                                    </div>
+                                    <p class="desc">We Served</p>
+                                    <p class="desc">
+                                        Through True Rich Attended does no end
+                                        it his mother since favourable.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- images right -->
+                        <div class="images">
+                            <img
+                                src="./assets/img/Know more Image 3.png"
+                                alt=""
+                                class="img"
+                            />
+                            <img
+                                src="./assets/img/Know more Image 4.png"
+                                alt=""
+                                class="img"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Image -->
+            <div class="image-know-more">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="container">
+                            <h2 class="heading lv2">
+                                One of the best Cafes in
+                                <strong>New York</strong>
+                            </h2>
+                            <p class="desc">
+                                Through True Rich Attended does no end it his
+                                mother since favourable real had half every him
+                                case in packages enquire we up ecstatic..
+                                Through True Rich Attended does no end it his
+                                mother
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Our History -->
+            <div class="history">
+                <div class="main-content">
+                    <div class="body">
+                        <h3 class="title-history heading lv3">Our History</h3>
+                        <div class="item-list">
+                            <!-- item 1 -->
+                            <div class="item">
+                                <p class="number">1998</p>
+                                <h4 class="heading lv4">Milestone One</h4>
+                                <p class="desc">
+                                    Through True Rich Attended does no end it his mother
+                                    since favourable.
+                                </p>
+                            </div>
+                            <!-- item 2 -->
+                            <div class="item">
+                                <p class="number">2005</p>
+                                <h4 class="heading lv4">Milestone Two</h4>
+                                <p class="desc">
+                                    Through True Rich Attended does no end it his mother
+                                    since favourable.
+                                </p>
+                            </div>
+                            <!-- item 3 -->
+                            <div class="item">
+                                <p class="number">2012</p>
+                                <h4 class="heading lv4">Milestone Three</h4>
+                                <p class="desc">
+                                    Through True Rich Attended does no end it his mother
+                                    since favourable.
+                                </p>
+                            </div>
+                            <!-- item 1 -->
+                            <div class="item">
+                                <p class="number">2021</p>
+                                <h4 class="heading lv4">Milestone Four</h4>
+                                <p class="desc">
+                                    Through True Rich Attended does no end it his mother
+                                    since favourable.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Text-KnowMore -->
+            <div class="text-kmore">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="column-left">
+                            <h2 class="heading lv2">Things our company stands for</h2>
+                        </div>
+                        <div class="column-right">
+                            <h3 class="heading lv3">Edit this text to make it your own. To edit, simply click directly</h3>
+                            <p class="desc">Writing UX copies can be a little frustrating and confusing, and sometimes we are unsure about how to get the right word. To crack the code for the UX copies, we at Zeta Design wanted to build a Figma plugin for the larger design community. The plugin is called the Ghost UXWriter and has a set of UX copies cataloged and categorized with a voice and tone variation ranging from plain, casual to playful. The intention to build this Figma plugin originated from our Medium blog post, ‘Designing voice and tone for error messages.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <!-- Footer -->
         <footer class="footer">
             <div class="main-content">
