--- a/aboutUs.html
+++ b/aboutUs.html
@@ -232,6 +232,48 @@
                     </div>
                 </div>
             </div>
+            <!-- Contact -->
+            <div class="contact">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="info">
+                            <div class="container">
+                                <!-- item 1 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Working Hour</h4>
+                                    <p class="desc">
+                                        Sunday to Saturday 09:00 AM to 11:00 PM
+                                    </p>
+                                </div>
+                                <!-- item 2 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Location</h4>
+                                    <p class="desc">
+                                        Street - 127, New York, United States 546544
+                                    </p>
+                                </div>
+                                <!-- item 3 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Contact us</h4>
+                                    <a href="tel:+123456789" class="desc"
+                                        ><p>+123456789</p></a
+                                    >
+                                    <a href="mailto:hey@yourdomain.com" class="desc"
+                                        ><p>hey@yourdomain.com</p></a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="map">
+                            <img
+                                src="./assets/img/Imgae-Contact-map.png"
+                                alt="map"
+                                class="img-map"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <!-- Footer -->
         <footer class="footer">
