Hoàn thành OurStory Page

--- a/ourStory.html
+++ b/ourStory.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <!-- Style -->
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/style_ourStory.css" />
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -65,6 +66,112 @@
                 </div>
             </div>
         </header>
+        <!-- Main -->
+        <main>
+            <!-- Story -->
+            <div class="story">
+                <div class="main-content">
+                    <div class="body">
+                        <!-- left column -->
+                        <div class="left-column">
+                            <h1 class="heading lv1">Our Story</h1>
+                            <p class="desc">
+                                Through True Rich Attended does no end it his
+                                mother since favourable real had half every him
+                                case in packages enquire we up ecstatic.
+                            </p>
+                            <div class="container">
+                                <img
+                                    src="./assets/img/Image-Story-1.png"
+                                    alt=""
+                                    class="img"
+                                />
+                                <img
+                                    src="./assets/img/Image-Story-2.png"
+                                    alt=""
+                                    class="img"
+                                />
+                            </div>
+                        </div>
+                        <!-- right column -->
+                        <div class="right-column">
+                            <h3 class="heading lv3">
+                                One of the best cafes in <strong>New York.</strong>
+                            </h3>
+                            <p class="desc">
+                                Writing UX copies can be a little frustrating
+                                and confusing, and sometimes we are unsure about
+                                how to get the right word. To crack the code for
+                                the UX copies, we at Zeta Design wanted to build
+                                a Figma plugin for the larger design community.
+                                The plugin is called the Ghost UXWriter and has
+                                a set of UX copies cataloged and categorized
+                                with a voice and tone variation ranging from
+                                plain, casual to playful. The intention to build
+                                this Figma plugin originated from our Medium
+                                blog post, ‘Designing voice and tone for error
+                                messages.
+                            </p>
+                            <p class="desc">
+                                Writing UX copies can be a little frustrating
+                                and confusing, and sometimes we are unsure about
+                                how to get the right word. To crack the code for
+                                the UX copies, we at Zeta Design wanted to build
+                                a Figma plugin for the larger design community.
+                                The plugin is called the Ghost UXWriter and has
+                                a set of UX copies cataloged and categorized
+                                with a voice and tone variation ranging from
+                                plain, casual to playful. The intention to build
+                                this Figma plugin originated from our Medium
+                                blog post, ‘Designing voice.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Contact -->
+            <div class="contact">
+                <div class="main-content">
+                    <div class="body">
+                        <div class="info">
+                            <div class="container">
+                                <!-- item 1 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Working Hour</h4>
+                                    <p class="desc">
+                                        Sunday to Saturday 09:00 AM to 11:00 PM
+                                    </p>
+                                </div>
+                                <!-- item 2 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Location</h4>
+                                    <p class="desc">
+                                        Street - 127, New York, United States 546544
+                                    </p>
+                                </div>
+                                <!-- item 3 -->
+                                <div class="item">
+                                    <h4 class="heading lv4">Contact us</h4>
+                                    <a href="tel:+123456789" class="desc"
+                                        ><p>+123456789</p></a
+                                    >
+                                    <a href="mailto:hey@yourdomain.com" class="desc"
+                                        ><p>hey@yourdomain.com</p></a
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                        <div class="map">
+                            <img
+                                src="./assets/img/Imgae-Contact-map.png"
+                                alt="map"
+                                class="img-map"
+                            />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <!-- Footer -->
         <footer class="footer">
             <div class="main-content">
