--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <!-- Style -->
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/style_blog.css">
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -65,6 +66,68 @@
                 </div>
             </div>
         </header>
+        <!-- Main -->
+        <main>
+            <!-- Featured -->
+            <div class="featured">
+                <div class="main-content">
+                    <h1 class="title-featured">Featured Blogs</h1>
+                    <div class="body">
+                        <!-- left column -->
+                        <div class="left-column">
+                            <div class="trending">
+                                <p class="desc-trend">Trending</p>
+                            </div>
+                            <p class="title-trending">A guide to Thai Curry</p>
+                            <div class="container">
+                                <img src="./assets/img/avt-featured.png" alt="avt-featured" class="avt">
+                                <div class="info">
+                                    <p class="name desc">Andrew Jonson</p>
+                                    <p class="date">27th January 2021</p>
+                                </div>
+                                <button class="action">
+                                    <span class="desc">Read More</span>
+                                    <img
+                                        src="./assets/img/arrow-to-right.svg"
+                                        alt="arrow-to-right"
+                                        class="arrow-to-right"
+                                    />
+                                </button>
+                            </div>
+                        </div>
+                        <!-- right column -->
+                        <div class="right-column">
+                            <div class="item-list">
+                                <!-- item 1 -->
+                                <div class="item">
+                                    <img src="./assets/img/Image-featured-2.png" alt="" class="thumb">
+                                    <div class="details">
+                                        <h4 class="heading lv4">You can move the text by dragging and dropping the text </h4>
+                                        <p class="desc">Writing UX copies can be a little frustrating and confusing, and sometimes </p>
+                                    </div>
+                                </div>
+                                <!-- item 2 -->
+                                <div class="item">
+                                    <img src="./assets/img/Image-featured-3.png" alt="" class="thumb">
+                                    <div class="details">
+                                        <h4 class="heading lv4">Edit this text to make it your own. To edit, simply </h4>
+                                        <p class="desc">Writing UX copies can be a little frustrating and confusing, and sometimes </p>
+                                    </div>
+                                </div>
+                                <!-- item 3 -->
+                                <div class="item">
+                                    <img src="./assets/img/Image-featured-4.png" alt="" class="thumb">
+                                    <div class="details">
+                                        <h4 class="heading lv4">You can move the text by dragging and dropping the text </h4>
+                                        <p class="desc">Writing UX copies can be a little frustrating and confusing, and sometimes </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <!-- Footer -->
         <footer class="footer">
             <div class="main-content">
